--- a/package.json
+++ b/package.json
@@ -24,18 +24,33 @@
     "@nestjs/common": "^11.0.6",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.6",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/swagger": "^11.0.2",
+    "@nestjs/throttler": "^6.4.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^2.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^5.0.1",
     "jest-mock-extended": "^4.0.0-beta1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "nestjs-pino": "^4.3.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "pino-http": "^10.4.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -46,6 +61,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
